--- a/accets/style.css
+++ b/accets/style.css
@@ -65,6 +65,7 @@ li {
     background-position-y: center;
     background-size: cover;
 }
+
 .blog-details-banner {
     background-image: url('/images/efbac6a3c59ca3b465c8dac901e023a4.jpg');
     background-repeat: no-repeat;
@@ -135,8 +136,113 @@ li {
     background-size: cover;
 }
 
+.dropdown-item:focus,
+.dropdown-item:hover {
+    background: #000000;
+    color: #fff;
+}
 
 
+/* search box */
+.search-container .button {
+    display: inline-block;
+    /* margin: 4px 2px; */
+    /* background-color: #444; */
+    font-size: 14px;
+    padding-left: 32px;
+    padding-right: 32px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 0px 8px 8px 0px;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.search-container .button:hover {
+    transition-duration: 0.4s;
+    -moz-transition-duration: 0.4s;
+    -webkit-transition-duration: 0.4s;
+    -o-transition-duration: 0.4s;
+    /* background-color: white; */
+    /* color: black; */
+}
+
+.search-container {
+    position: relative;
+    display: inline-block;
+    margin: 0px;
+    height: 40px;
+    width: 50px;
+    vertical-align: bottom;
+}
+
+.mglass {
+    display: inline-block;
+    pointer-events: none;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+}
+
+.search-container .searchbutton {
+    position: absolute;
+    font-size: 40px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.search:focus+.searchbutton {
+    transition-duration: 0.4s;
+    -moz-transition-duration: 0.4s;
+    -webkit-transition-duration: 0.4s;
+    -o-transition-duration: 0.4s;
+    background-color: white;
+    color: black;
+}
+
+.search {
+    position: absolute;
+    left: 49px;
+    background-color: white;
+    outline: none;
+    border: none;
+    padding: 0;
+    width: 0;
+    height: 100%;
+    z-index: 10;
+    border-radius: 8px 0px 0px 8px;
+    transition-duration: 0.4s;
+    -moz-transition-duration: 0.4s;
+    -webkit-transition-duration: 0.4s;
+    -o-transition-duration: 0.4s;
+}
+
+.search:focus {
+    width: 233px;
+    /* Bar width+1px */
+    padding: 0 16px 0 0;
+}
+
+.expandright {
+    left: auto;
+    right: 49px;
+    /* Button width-1px */
+}
+
+.expandright:focus {
+    padding: 0 0 0 16px;
+}
+
+/* search box end */
 
 @media screen and (max-width:990px) {
     .navbar-collapse {
@@ -146,7 +252,7 @@ li {
         backdrop-filter: blur(15px);
         background-repeat: no-repeat;
         background-size: cover;
-        width: 250px;
+        /* width: 250px; */
         height: 100vh;
         right: 0;
         padding: 23px;
@@ -167,7 +273,7 @@ li {
         backdrop-filter: blur(15px);
         background-repeat: no-repeat;
         background-size: cover;
-        width: 250px;
+        /* width: 250px; */
         height: 100vh;
         right: 0;
         padding: 23px;
